Add OPENAI_API_KEY to daily report workflow

--- a/.github/workflows/daily-linear-report.yml
+++ b/.github/workflows/daily-linear-report.yml
@@ -22,5 +22,6 @@ jobs:
           LINEAR_API_KEY: ${{ secrets.LINEAR_API_KEY }}
           NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TZ_OFFSET_HOURS: "9"
         run: node .github/scripts/daily-linear-report.js
